--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,72 @@
   </head>
   <body>
     <div id="content"></div>
-    <script type="text/jsx;harmony=true" src="scripts/example.js"></script>
+    <!-- <script type="text/jsx;harmony=true" src="scripts/example.js"></script> -->
+    <script type="text/jsx">
+      var data = [
+        {author: "James Joyce", text: "This is a comment"}, 
+        {author: "Steven Hawking", text:"This is *another* comment"}
+      ];
+
+      var CommentBox = React.createClass({
+        render: function() {
+          return(
+            <div className="commentBox">
+              Hello, world! I am a CommentBox.
+              <h1>Comments</h1>
+              <CommentList data={this.props.data} />
+              <CommentForm />
+            </div>
+          );
+        }
+      });
+
+      var CommentList = React.createClass({
+        render: function() {
+          var commentNodes = this.props.data.map(function(comment) {
+            return(
+              <Comment author={comment.author}>
+                {comment.text}
+              </Comment>
+            );
+          });
+          return(
+            <div className="commentList">
+              {commentNodes}
+            </div>
+          );
+        }
+      });
+
+      var CommentForm = React.createClass({
+        render: function() {
+          return(
+            <div className="commentForm">
+              Hello, world! I am commentForm.
+            </div>
+          );
+        }
+      });
+
+      var Comment = React.createClass({
+        render: function() {
+          var rawMarkup = marked(this.props.children.toString(), {sanitize: true});
+          return(
+            <div className="comment">
+              <h2 className="commentAuthor">
+                {this.props.author}
+              </h2>
+              <span dangerouslySetInnerHTML={{__html: rawMarkup}} />
+            </div>
+          );
+        }
+      });
+
+      React.render(
+        <CommentBox data={data} />,
+        document.getElementById('content')
+      );
+
+    </script>
   </body>
 </html>
